# circuitlib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: run_tests.yml
src/circuitlib/: __init__.py  element.py  netlist.py  signals.pxd  signals.pyx  simulate.py  solver.pyx
tests/: conftest.py  test_element.py  test_netlist.py  test_simulate.py  test_transient.py
