[metadata]
name = circuitlib
version = 0.0.1
description = My package description
long_description = file: README.md
keywords = electonics, simuation, engineering
# license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
install_requires =
    numpy
    scipy
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
# setup_requires =  # required for pip < 10 - should we include this?
#     cython
